[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "host-sniper"
version = "0.1.1"
description = "Combined security scanning and reconnaissance tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "malwaredot"}]
keywords = ["security", "scanner", "network", "recon"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking",
    "Topic :: Security",
]

dependencies = [
    "requests>=2.28.0",
    "rich>=13.0.0",
    "urllib3>=1.26.0",
    "dnspython>=2.3.0",
    "python-whois>=0.7.3"
]

[project.urls]
Home = "https://github.com/malwaredot/host-sniper"
"Bug Tracker" = "https://github.com/malwaredot/host-sniper/issues"

[project.scripts]
host-sniper = "host_sniper.main:main"
