[metadata]
name = host-sniper
version = 0.1.2
author = malwaredot
author_email = N/A
description = Combined security scanning and reconnaissance tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/malwaredot/host-sniper
project_urls =
    Bug Tracker = https://github.com/malwaredot/host-sniper/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: System :: Networking
    Topic :: Security

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.28.0
    rich>=13.0.0
    urllib3>=1.26.0
    dnspython>=2.3.0
    python-whois>=0.7.3

include_package_data = true
license_file = LICENSE

[options.entry_points]
console_scripts =
    host-sniper = host_sniper.main:main
